<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/channelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="20dp"
        android:paddingBottom="33dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_small"
        tools:text="Канал 1" />

    <TextView
        android:id="@+id/channelStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_receipt_channel_status"
        style="@style/Title"
        />

    <TextView
        android:id="@+id/channelStatus"
        style="@style/Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"

        android:text="Выкл" />

    <TextView
        android:id="@+id/pulseFormTextView"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_receipt_pulse_form"
        />

    <TextView
        android:id="@+id/pulseFormValueTextView"
        style="@style/Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"

        android:text="@string/create_receipt_pulse_form_not_chosen" />


    <TextView
        android:id="@+id/bipolarRegimeTextView"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_receipt_bipolar_regime" />


    <TextView
        android:id="@+id/bipolarStatus"
        style="@style/Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"

        android:text="Выкл" />



    <TextView
        android:id="@+id/amperageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/create_receipt_seek_bar_margin_top"
        android:paddingTop="@dimen/create_receipt_seek_bar_margin_bottom"
        android:text="@string/create_receipt_amperage_format"
        style="@style/Title" />


    <TextView
        android:id="@+id/pulseDurabilityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/create_receipt_seek_bar_margin_top"
        android:paddingTop="@dimen/create_receipt_seek_bar_margin_bottom"
        style="@style/Title"
        android:text="@string/create_receipt_pulse_durability_format"
        />


    <TextView
        android:id="@+id/pulsePauseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/create_receipt_seek_bar_margin_top"
        android:paddingTop="@dimen/create_receipt_seek_bar_margin_bottom"
        style="@style/Title"
        android:text="Длительность паузы = %s мс"
        />
    <TextView
        android:id="@+id/pulseFrequencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/create_receipt_seek_bar_margin_top"
        android:paddingTop="@dimen/create_receipt_seek_bar_margin_bottom"
        style="@style/Title"
        android:text="@string/create_receipt_pulse_frequency_format"
        />

</LinearLayout>