<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/fragment_auth_registration">

    <TextView
        android:id="@+id/genderTitle"
        style="@style/AuthRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/auth_inputs_margin_bottom"
        android:text="@string/auth_register_gender_title"
        app:layout_constraintTop_toBottomOf="@+id/auth_register_surname_edit_text" />

    <TextView
        android:id="@+id/genderTextView"
        style="@style/AuthRegisterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_register_default"
        app:layout_constraintTop_toBottomOf="@+id/genderTitle" />


    <TextView
        android:id="@+id/ageTitle"
        style="@style/AuthRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/auth_inputs_margin_bottom"
        android:text="@string/auth_register_birthdate_title"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView" />

    <TextView
        android:id="@+id/ageTextView"
        style="@style/AuthRegisterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_register_default"
        app:layout_constraintTop_toBottomOf="@+id/ageTitle" />


    <TextView
        android:id="@+id/heightTitle"
        style="@style/AuthRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/auth_inputs_margin_bottom"
        android:text="@string/auth_register_height_title"
        app:layout_constraintTop_toBottomOf="@+id/ageTextView" />

    <TextView
        android:id="@+id/heightTextView"
        style="@style/AuthRegisterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_register_default"
        app:layout_constraintTop_toBottomOf="@+id/heightTitle" />


    <TextView
        android:id="@+id/weightTitle"
        style="@style/AuthRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/auth_inputs_margin_bottom"
        android:text="@string/auth_register_weight_title"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

    <TextView
        android:id="@+id/weightTextView"
        style="@style/AuthRegisterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_register_default"
        android:paddingBottom="@dimen/auth_text_margin_bottom"
        app:layout_constraintTop_toBottomOf="@+id/weightTitle" />
</merge>