<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="none">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Запрограммировать"
                android:id="@+id/start_btn"
                android:layout_marginTop="16dp"
                style="@style/AuthButton"/>

            <TextView
                android:id="@+id/channelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingTop="20dp"
                android:paddingBottom="33dp"
                android:text="@string/create_receipt_schedule"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/type"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_receipt_type" />

            <TextView
                android:id="@+id/typeValue"
                style="@style/Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="26dp"
                android:text="@string/create_receipt_type_lite" />

            <TextView
                android:id="@+id/executionTimeTextView"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/create_receipt_seek_bar_margin_top"
                android:text="@string/create_receipt_execution_time"
                tools:visibility="visible" />

            <SeekBar
                android:id="@+id/executionTimeSeekBar"
                style="@style/CreateReceiptSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="26dp"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/start"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_receipt_start" />

            <TextView
                android:id="@+id/startValue"
                style="@style/Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="26dp"
                android:text="08:00" />

            <TextView
                android:id="@+id/end"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_receipt_end" />

            <TextView
                android:id="@+id/endValue"
                style="@style/Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="26dp"
                android:text="20:00" />

            <LinearLayout
                android:id="@+id/channelContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>